--- a/scss/_generals.scss
+++ b/scss/_generals.scss
@@ -132,7 +132,17 @@ body {
 }
 
 p {
-    font-size: 18px;
+    font-size: $text_size;
+
+}
+
+
+
+/* BANNERS */
+.banner-cont {
+    img {
+        width: 100%;
+    }
 }
 
 /** TITULOS **/
