--- a/scss/_generals.scss
+++ b/scss/_generals.scss
@@ -44,6 +44,7 @@ $text_size: 18px;
 $gradient-color: #f98627;
 $main-color: #f96404;
 $text-color: #333333;
+$naranja-claro: #ff7e00;
 
 /** Generals **/
 * {
@@ -133,6 +134,10 @@ body {
 
 p {
     font-size: 18px;
+}
+
+img{
+    display: block;
 }
 
 /** TITULOS **/
