--- a/css/resultados.css
+++ b/css/resultados.css
@@ -376,10 +376,23 @@ p.title strong {
           justify-content: center;
   margin: 40px auto;
 }
+.facts-shapes .owl-stage {
+  margin: 0 auto;
+}
+.facts-shapes .owl-stage .owl-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
 .facts-shapes .item {
   position: relative;
   height: 150px;
-  margin-right: -50px;
 }
 .facts-shapes .item.year .text {
   font-size: 56px;
@@ -390,7 +403,7 @@ p.title strong {
 }
 .facts-shapes .item img {
   top: 0;
-  height: 150px;
+  height: 150px !important;
   -webkit-transition: all 300ms;
   transition: all 300ms;
 }
@@ -424,17 +437,18 @@ p.title strong {
   display: block;
 }
 .facts-shapes .item .icon {
-  width: 30px;
+  width: 30px !important;
+  max-width: 30px;
   position: absolute;
   top: 12px;
   left: 35px;
 }
 .facts-shapes .item .icon img {
-  width: 100%;
   height: auto;
+  height: 30px !important;
+  min-height: 30px;
 }
 .facts-shapes.alt {
-  margin-left: -50px;
   margin-right: 0px;
 }
 .facts-shapes.alt .last p {
