--- a/scss/resultados.scss
+++ b/scss/resultados.scss
@@ -95,11 +95,20 @@ p.title {
     justify-content: center;
     margin: 40px auto;
 
+    .owl-stage {
+        margin: 0 auto;
+
+        .owl-item {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    }
 
     .item {
         position: relative;
         height: 150px;
-        margin-right: -50px;
+
 
 
         &.year {
@@ -120,7 +129,7 @@ p.title {
         img {
             // position: absolute;
             top: 0;
-            height: 150px;
+            height: 150px !important;
             transition: all 300ms;
 
         }
@@ -155,20 +164,22 @@ p.title {
         }
 
         .icon {
-            width: 30px;
+            width: 30px !important;
+            max-width: 30px;
             position: absolute;
             top: 12px;
             left: 35px;
 
             img {
-                width: 100%;
+
                 height: auto;
+                height: 30px !important;
+                min-height: 30px;
             }
         }
     }
 
     &.alt {
-        margin-left: -50px;
         margin-right: 0px;
 
 
@@ -200,3 +211,21 @@ hr.orange {
     max-width: 600px;
     width: 90%;
 }
+
+// @media screen and (max-width: 480px) {
+//     .facts-shapes {
+//         background-color: #fff;
+
+//         width: 100%;
+
+//         .owl-stage {
+//             margin: 0 auto;
+
+//             .owl-item {
+//                 display: flex;
+//                 align-items: center;
+//                 justify-content: center;
+//             }
+//         }
+//     }
+// }
