--- a/css/resultados.css
+++ b/css/resultados.css
@@ -229,6 +229,47 @@ p.title strong {
   font-family: "HelveticaNeue BlackCond";
 }
 
+.cont-general-ultimos {
+  position: relative;
+  overflow: hidden;
+}
+.cont-general-ultimos .dec-circulos {
+  position: absolute;
+  right: -7.5px;
+  top: 25%;
+  width: 50px;
+  pointer-events: none;
+  z-index: -1;
+}
+.cont-general-ultimos .dec-circulos-izq {
+  position: absolute;
+  left: -10.5px;
+  bottom: 20%;
+  width: 50px;
+  pointer-events: none;
+  z-index: -1;
+}
+.cont-general-ultimos .dec-pintura-izq {
+  position: absolute;
+  left: 0;
+  top: 5%;
+  width: 32px;
+  pointer-events: none;
+  z-index: -1;
+}
+
+footer {
+  position: relative;
+}
+footer .dec-pintura {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 63px;
+  pointer-events: none;
+  z-index: -1;
+}
+
 .facts-cont {
   background-image: url(../img/mancha-bg.png);
   background-size: cover;
