--- a/scss/resultados.scss
+++ b/scss/resultados.scss
@@ -10,6 +10,47 @@ p.title {
     }
 }
 
+.cont-general-ultimos{
+    position: relative;
+    overflow: hidden;
+    .dec-circulos{
+        position: absolute;
+        right: -7.5px;
+        top: 25%;
+        width: 50px;
+        pointer-events: none;
+        z-index: -1;
+    }
+    .dec-circulos-izq{
+        position: absolute;
+        left: -10.5px;
+        bottom: 20%;
+        width: 50px;
+        pointer-events: none;
+        z-index: -1;
+    }
+    .dec-pintura-izq{
+        position: absolute;
+        left: 0;
+        top: 5%;
+        width: 32px;
+        pointer-events: none;
+        z-index: -1;
+    }
+}
+
+footer{
+    position: relative;
+    .dec-pintura{
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        width: 63px;
+        pointer-events: none;
+        z-index: -1;
+    }
+}
+
 .facts-cont {
     background-image: url(../img/mancha-bg.png);
     background-size: cover;
