--- a/css/aliados.css
+++ b/css/aliados.css
@@ -226,6 +226,67 @@ footer .grid .column a {
   color: #f96404;
 }
 
+.contenedor-global-aliados {
+  position: relative;
+  overflow: hidden;
+}
+.contenedor-global-aliados .dec-circulos {
+  position: absolute;
+  right: -3.5px;
+  top: 1.5%;
+  width: 50px;
+  pointer-events: none;
+  z-index: -1;
+}
+.contenedor-global-aliados .dec-circulos2 {
+  position: absolute;
+  right: -3.5px;
+  top: 64%;
+  width: 50px;
+  pointer-events: none;
+  z-index: -1;
+}
+.contenedor-global-aliados .dec-circulos-izq {
+  position: absolute;
+  left: -10.5px;
+  top: 11.5%;
+  width: 50px;
+  pointer-events: none;
+  z-index: -1;
+}
+.contenedor-global-aliados .dec-pintura {
+  position: absolute;
+  right: 0;
+  top: 36%;
+  width: 63px;
+  pointer-events: none;
+  z-index: -1;
+}
+.contenedor-global-aliados .dec-pintura2 {
+  position: absolute;
+  right: 0;
+  bottom: 3%;
+  width: 63px;
+  pointer-events: none;
+  z-index: -1;
+}
+.contenedor-global-aliados .dec-pintura-izq {
+  position: absolute;
+  left: 0;
+  top: 56%;
+  width: 75px;
+  pointer-events: none;
+  z-index: -1;
+}
+.contenedor-global-aliados .dec-circulos-izq2 {
+  position: absolute;
+  left: -10.5px;
+  top: 72%;
+  width: 50px;
+  pointer-events: none;
+  z-index: -1;
+}
+
 .item hr {
   background-color: #f96404;
   height: 1px;
