--- a/css/informeanual.css
+++ b/css/informeanual.css
@@ -257,14 +257,19 @@ footer .grid .column a {
 .contenedor-general-informes .contenedor-informes .cont-informe {
   width: 32%;
   background: #f05c04;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
   box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 8px;
   transition: all 0.3s;
+  position: relative;
 }
 .contenedor-general-informes .contenedor-informes .cont-informe img {
   width: 100%;
+  visibility: hidden;
 }
 .contenedor-general-informes .contenedor-informes .cont-informe .cont-info {
   padding: 30px;
@@ -298,6 +303,16 @@ footer .grid .column a {
 }
 .contenedor-general-informes .contenedor-informes .cont-informe:hover {
   transform: scale(0.95);
+}
+.contenedor-general-informes .contenedor-informes .cont-informe::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #f05c04;
+  opacity: 0.55;
 }
 
 @media screen and (max-width: 767px) {
